--- a/CSS/twitter.css
+++ b/CSS/twitter.css
@@ -36,6 +36,10 @@ a {
     padding: 0;
     margin: 0;
 }
+.nav-item {
+    display: inline-block;
+    padding: 1.5em;
+}
 .nav-link {
     color: var(--main-link-color);
     font-weight: bold;
